# pgmini

./: README.md  pgmini-demo.ipynb  pyproject.toml
pgmini/: __init__.py  util.py
pgmini/m1/: __init__.py  cpd.py  graph.py
pgmini/m2/: __init__.py  factor.py  graph.py
pgmini/m3/: __init__.py  factor.py  model.py
pgmini/m4/: __init__.py  alg.py  mcmc.py
pgmini/m5/: __init__.py  mcmc.py
