[project]
name = "pgmini"
version = "0.4.0"
description = "A minimal probabilistic graphical models library for teaching"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Wilker Aziz", email = "w.aziz@uva.nl" }
]

# Any external dependencies go here
dependencies = [
  "numpy>=1.20",
  "tabulate>=0.9.0,<1.0",
  "pandas>=2.3.3"
]

# Optional keywords / classifiers (good for publishing, but safe to include)
keywords = ["pgm", "teaching", "bayesian-networks", "markov-networks", "factor-graphs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgmini*"]
